--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-WtEiR / D2uJhqYw / SyJj3FskC / sXtLFMYF / oRxNtJLPx / rQbZ1Yz / VJ3LdGz / tx0oIJy / Ur + YYQ5M1r5x5ypw =="
+      crossorigin="anonyme"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -40,4 +46,22 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script
+    src="https://kit.fontawesome.com/0123456789.js"
+    crossorigin="anonymous"
+  ></script>
+  <script>
+    const hamburgerMenu = document.querySelector('.hamburger-menu')
+    hamburgerMenu.addEventListener('click', () => {
+      hamburgerMenu.classList.toggle('active')
+    })
+
+    const toggleSidebar = () => {
+      document.querySelector('.navigation').classList.toggle('active')
+    }
+
+    document
+      .querySelector('#menu-button')
+      .addEventListener('click', toggleSidebar)
+  </script>
 </html>
