--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,21 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script text="application/js">
+    const slideContainer = document.querySelector('.slide-container')
+    let isScrolling
+
+    slideContainer.addEventListener('scroll', function () {
+      clearTimeout(isScrolling)
+      isScrolling = setTimeout(function () {
+        const currentSlide = Math.round(
+          slideContainer.scrollLeft / window.innerWidth,
+        )
+        const slides = document.querySelectorAll('.slide')
+        slides[currentSlide].classList.add('active')
+      }, 100)
+    })
+  </script>
   <script
     src="https://kit.fontawesome.com/0123456789.js"
     crossorigin="anonymous"
